<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/product_img"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:scaleType="centerCrop"
                    />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/statusTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@id/product_img"
                    android:text="@string/status"
                    android:textSize="24sp"
                    android:textColor="@color/black"
                    android:layout_margin="10dp"
                    />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/status"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@id/statusTitle"
                    android:text="@string/statusInfo"
                    android:textSize="24sp"
                    android:textColor="@color/black"
                    android:layout_margin="10dp"
                    />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/validity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/statusTitle"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_toRightOf="@id/product_img"
                    android:text="@string/validity"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/subscribe"
                    android:text="@string/subscribeBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@id/product_img"
                    android:layout_below="@id/validity"
                    />
            </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/upcoming"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Upcoming Booking:"
        android:layout_below="@id/cardView"
        android:textSize="24sp"
        android:textColor="@color/black"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/upcoming"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        android:layout_alignParentBottom="true"
        />

</RelativeLayout>












